--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "prettier:check": "yarn prettier . --check",
+    "prettier:fix": "yarn prettier . --write",
     "start": "react-native start",
     "test": "jest"
   },
   "dependencies": {
+    "prettier": "^3.4.2",
     "react": "18.3.1",
     "react-native": "0.76.5"
   },
@@ -26,10 +30,15 @@
     "@react-native/typescript-config": "0.76.5",
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.18.1",
+    "@typescript-eslint/parser": "^8.18.1",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
     "jest": "^29.6.3",
-    "prettier": "2.8.8",
     "react-test-renderer": "18.3.1",
     "typescript": "5.0.4"
   },
