--- a/package.json
+++ b/package.json
@@ -10,7 +10,14 @@
     "prettier:check": "yarn prettier . --check",
     "prettier:fix": "yarn prettier . --write",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "prepare": "husky install"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "yarn lint:fix",
+      "yarn prettier:fix"
+    ]
   },
   "dependencies": {
     "prettier": "^3.4.2",
@@ -38,7 +45,9 @@
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-simple-import-sort": "^12.1.1",
+    "husky": "^8.0.0",
     "jest": "^29.6.3",
+    "lint-staged": "^15.2.11",
     "react-test-renderer": "18.3.1",
     "typescript": "5.0.4"
   },
