--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "android": "react-native run-android",
+    "start": "react-native start",
     "ios": "react-native run-ios",
+    "android": "react-native run-android",
+    "test": "jest",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "prettier:check": "yarn prettier . --check",
     "prettier:fix": "yarn prettier . --write",
-    "start": "react-native start",
-    "test": "jest",
     "prepare": "husky install"
   },
   "lint-staged": {
@@ -20,9 +20,13 @@
     ]
   },
   "dependencies": {
+    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/native-stack": "^7.2.0",
     "prettier": "^3.4.2",
     "react": "18.3.1",
-    "react-native": "0.76.5"
+    "react-native": "0.76.5",
+    "react-native-safe-area-context": "^5.0.0",
+    "react-native-screens": "^4.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -40,6 +44,7 @@
     "@typescript-eslint/eslint-plugin": "^8.18.1",
     "@typescript-eslint/parser": "^8.18.1",
     "babel-jest": "^29.6.3",
+    "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^8.19.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
