--- a/package.json
+++ b/package.json
@@ -26,7 +26,11 @@
     "react": "18.3.1",
     "react-native": "0.76.5",
     "react-native-safe-area-context": "^5.0.0",
-    "react-native-screens": "^4.4.0"
+    "react-native-screens": "^4.4.0",
+    "styled-components": "^6.1.13"
+  },
+  "resolutions": {
+    "styled-components": "^5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
