--- a/package.json
+++ b/package.json
@@ -27,10 +27,9 @@
     "react-native": "0.76.5",
     "react-native-safe-area-context": "^5.0.0",
     "react-native-screens": "^4.4.0",
-    "styled-components": "^6.1.13"
-  },
-  "resolutions": {
-    "styled-components": "^5"
+    "react-native-shadow-2": "^7.1.1",
+    "react-native-svg": "^15.10.1",
+    "react-native-svg-transformer": "^1.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
