--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,14 +8,8 @@
     "module": "Node16",
     "baseUrl": ".",
     "paths": {
-      "src/*": [
-        "./src/*",
-        "./src"
-      ],
-      "assets/*": [
-        "./assets/*",
-        "./assets"
-      ]
+      "src/*": ["./src/*", "./src"],
+      "assets/*": ["./assets/*", "./assets"]
     },
     "forceConsistentCasingInFileNames": true,
     "allowSyntheticDefaultImports": true,
@@ -34,9 +28,5 @@
     "./assets/*",
     "./@types/index.d.ts"
   ],
-  "exclude": [
-    "node_modules",
-    "dist",
-    "./*.js"
-  ]
+  "exclude": ["node_modules", "dist", "./*.js"]
 }
