--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,13 @@
     "moduleResolution": "node16",
     "skipLibCheck": true
   },
-  "include": ["./*.ts", "./src/**/*.tsx", "./src/**/*.ts", "./src/*", "./assets/*", "./@types/index.d.ts"],
+  "include": [
+    "./*.ts",
+    "./src/**/*.tsx",
+    "./src/**/*.ts",
+    "./src/*",
+    "./assets/*",
+    "./@types/index.d.ts"
+  ],
   "exclude": ["node_modules", "dist", "./*.js"]
 }
