--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "lint:fix": "eslint . --fix",
     "prettier:check": "yarn prettier . --check",
     "prettier:fix": "yarn prettier . --write",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "server": "json-server viacerta-users.json --watch -p 3333"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
@@ -24,10 +25,13 @@
     "@react-native-async-storage/async-storage": "^2.1.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
+    "axios": "^1.7.9",
+    "json-server": "^1.0.0-beta.3",
     "prettier": "^3.4.2",
     "react": "18.3.1",
     "react-hook-form": "^7.54.2",
     "react-native": "0.76.5",
+    "react-native-dotenv": "^3.4.11",
     "react-native-modal": "^13.0.1",
     "react-native-safe-area-context": "^5.0.0",
     "react-native-screens": "^4.4.0",
@@ -47,6 +51,7 @@
     "@react-native/eslint-config": "0.76.5",
     "@react-native/metro-config": "0.76.5",
     "@react-native/typescript-config": "0.76.5",
+    "@types/express": "^5.0.0",
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^8.18.1",
